--- a/newstyle.sty
+++ b/newstyle.sty
@@ -268,11 +268,11 @@
 	includefoot,					% 	- include footer space
 	includemp,						% 	- include side note space
 	bindingoffset=0.5cm,			% 	- binding correction
-	top=2.25cm,						% 	- total body: top margin
+	top=2.5cm,						% 	- total body: top margin
 	left=2.5cm,					% 	- total body: left margin (odd pages)
-	right=0.75cm,					% 	- total body: right margin (odd pages)
-	bottom=1.5cm,					% 	- total body: bottom margin
-	marginparwidth=1.75cm,			% 	- width for side note
+	right=2.5cm,					% 	- total body: right margin (odd pages)
+	bottom=2.5cm,					% 	- total body: bottom margin
+	marginparwidth=0cm,			% 	- width for side note
 	marginparsep=10pt,				% 	- space between notes and body text (content)
 	footskip=2cm,					% 	- footer skip size
 ]{geometry}
@@ -286,8 +286,9 @@
 % **************************************************
 % Text Format
 % **************************************************
-\setstretch{1.25}					% value for line spacing, use \setstretch{} or \singlespacing or \onehalfspacing or \doublespacing
-\setlength{\parindent}{0em}			% value for paragraph indentation
+%\setstretch{1.25}					% value for line spacing, use \setstretch{} or \singlespacing or \onehalfspacing or \doublespacing
+\onehalfspacing 
+\setlength{\parindent}{2em}			% value for paragraph indentation
 \clubpenalty = 10000				% prevent single lines at the beginning of a paragraph (Schusterjungen)
 \widowpenalty = 10000				% prevent single lines at the end of a paragraph (Hurenkinder)
 \displaywidowpenalty = 10000		%
