--- a/main.tex
+++ b/main.tex
@@ -114,7 +114,7 @@
 \newcommand{\Cabecalho}{
 \vspace{-0.5cm}\normalfont\normalfont
 \vfill
-\textsc{\normalsize\uppercase{Instituo Superior Manuel Teixeira Gomes}}\\
+\textsc{\normalsize\uppercase{Instituto Superior Manuel Teixeira Gomes}}\\
 \vspace{1.5cm}
 \includegraphics[scale=.9]{pic/logotipo_ISMAT.pdf}\\
 }
